--- a/css/phone.css
+++ b/css/phone.css
@@ -1,303 +1,512 @@
-/*Phone*/
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
 
-@media screen and (min-width:320px) and (max-width: 500px) {
-	/*Header*/
-	header {
-		margin: auto;
-		border-bottom: 5px solid #E74700;
-		min-height: 50px;
-		padding-top: 5%;
+@media screen and (min-width: 340px) and (max-width:499px) {
+header{
+    background-color:#292929;
+    position: fixed;
+    width: 100%;
+	padding: 5% 0;
+    z-index: 5;
+}
+
+.header-wrap{
+    width:90%;
+    margin:auto;
+    padding: 1% 0;
+    display: block;
+
+}
+
+.logo{
+    display: block;
+    margin: auto;
+    width: 40%;
+}
+
+/*Navigation*/
+nav {
+    width:90%;
+    margin: 3% auto 0;
+    text-align: right;
+    font-family: "Bebas Neue", Roboto, "sans-serif";
+}
+nav ul li {
+    display: inline;
+    margin: 1% 1%;
+    text-align: center!important;
+    font-size: 1.5em;
+    cursor: pointer;
+    text-decoration: none;
+}
+nav ul li:hover {
+    text-decoration: underline 1px;
+}
+nav a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+
+}
+
+.main-section h1{
+    text-align: center;
+    color:white;
+    font-family: "Bebas Neue", Roboto, "sans-serif";
+    font-size: 3em;
+}
+/*HOMEPAGE*/
+.main-section{
+    background-image: url(../images/main-picture.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    height: 90vh;
+    padding-top: 20%;
+}
+
+.main-section a {
+    border-radius: 5%;
+    margin: auto;
+    margin-top: 1%;
+    padding: 0.3% 0 0.1%;
+    display: block;
+    width: 150px;
+    text-align: center;
+    background-color: white;
+    font-size:3em;
+    color:rgb(0, 0, 0);
+    text-decoration: none;
+    font-family: "Bebas Neue", Roboto, "sans-serif";
+}
+
+.main-section a:hover {
+
+    background-color: #E74700;
+    color:rgb(255, 255, 255);
+ 
+}
+.main-section i{
+	margin-top: 30vh;
+    color:white;
+    font-size:5em;
+    display: block;
+   text-align: center;
+
+}
+
+.introduction{
+    width:90%;
+    font-size: 1.5em;
+    margin: 5% auto;
+    text-align: justify;
+    font-family: Roboto, "Bebas Neue",  "sans-serif";
+    
+}
+
+.b-types{
+    margin:auto;
+    width:90%;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5%;
+}
+
+.b-types img{
+    width: 25vw;
+}
+
+.b-types img:hover{
+    transform: scale(1.07);
+    transition: 1.5s;
+}
+
+
+.access{
+    background-image: url(../images/acc-phone.jpg);
+    height:20vh;
+    background-attachment: fixed;
+    width:90%;
+    margin: auto;
+}
+
+
+.access a{
+    color:white;
+    text-decoration: none;
+    font-family: "Bebas Neue", Roboto, "sans-serif";
+    font-size: 1.5em;
+    display: block;
+    text-align: right;
+    width:90%;
+    margin: auto;
+    padding-top: 15%;
+}
+
+.access a:hover{
+    transform: scale(1.07);
+    transition: 1.5s;
+}
+
+.customize-section{
+    background-image: url(../images/customization.jpg);
+    height:20vh;
+    width: 90%;
+    margin: auto;
+    background-size: cover;
+	background-position: 70%;
+    background-attachment: fixed;
+    margin-top: 4%;
+}
+
+.customize-section a{
+    color:white;
+    text-decoration: none;
+    font-family: "Bebas Neue", Roboto, "sans-serif";
+    font-size: 1.5em;
+    display: block;
+    text-align: right;
+    width:90%;
+    margin: auto;
+    padding-top: 15%;
+}
+
+
+.customize-section a:hover{
+    transform: scale(1.07);
+    transition: 1.5s;
+}
+
+
+	/*SHOP*/
+
+    .shop{
+        padding-top: 35%;
+        width:90%;
+        margin: 0 auto 15%;
+        font-family: Roboto, "Bebas Neue", "sans-serif";
+    }
+
+    .shop i {
+        color:rgb(0, 0, 0);
+        font-size:5em;
+        display: block;
+       text-align: center;
+    }
+    .shop h1{
         font-family: "Bebas Neue", Roboto, "sans-serif";
-	}
-	.header-wrap {
-		width: 90%;
-		margin: auto;
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
-	.logo {
-		width: 50%;
-	}
-	
-	.search-container{
-		width:200px;
-	}
-
-	.search-container i{
-		position:absolute;
-		margin-left: 8px;
-		margin-top: 4px;
-		font-size:14px;
-		z-index: 1;
-		color: #9c9c9c;
-	}
-	#search{
-		border: 2px solid #D4D4D4;
-		border-radius: 5px;
-		padding-left:15%;
-		color: #D4D4D4;
-		font-family: Roboto, "Bebas Neue", sans-serif;;
-	}
-	#search:focus{
-		outline:none;
-		filter: drop-shadow(1px 4px 3px rgb(167, 167, 167));
-		border: 2px solid #D4D4D4;
-		border-radius: 5px;
-		padding-left:15%;
-		color: #D4D4D4;
-		font-family: Roboto, "Bebas Neue", sans-serif;;
-	}
-	/*Navigation*/
-	nav {
-		width: 100%;
-		margin: auto;
-		text-align: center;
-	}
-	nav ul {
-		margin: 1% 0;
-		padding: 5% 0;
-	}
-	nav li {
-		display: inline;
-		padding: 0 1%;
-	}
-	nav a {
-		text-decoration: none;
-		color: black;
-        font-size:1.2em;
-	}
-	.logo {
-		width: 50%;
-		display: block;
-		margin: 2% auto;
-	}
-
-
-	/*Main and sections for HOMEPAGE*/
-
-	main {
-		width: 100%;
-	}
-	.container-for-text-image img {
-		display: none;
-	}
-	.main-section {
-		background-image: url("../images/main-pic1-phone.png");
-		background-size: cover;
-		padding-top: 1%;
-		min-height: 400px;
-	}
-	.main-section h1 {
-		color: white;
-		font-family: "Bebas Neue", Roboto, "sans-serif";
 		text-align: center;
 		font-size: 3em;
-		padding-top: 25%;
+        width:100%;
+        margin: 0;
+    }
+	.shop h3{
+        text-align: center;
+        font-family:  "Bebas Neue", Roboto, sans-serif;
+        font-size:1.6em;
+        margin-top: 0;
+        width:100%;
+        margin: 0 0 5% 0%;
+        text-decoration: underline;
+    
 	}
-	/*Next sections */
-	.introduction {
-		font-family: Roboto, "Bebas Neue", sans-serif;
-		font-size: 1.3em;
-		width: 90%;
-		line-height: 1.5;
-		margin: 5% auto;
+
+	aside{
+        display: none;
 	}
-	.introduction p {
-		width: 100%;
-		text-align: justify;
-		margin: 2% auto;
+
+
+	.shopSection {
+
+		width:100%;
+		display: grid;
+		grid-template-columns: 50% 50%;
+		grid-gap: 1%;
+        margin: 0;
+		margin-top: 0;
+
 	}
-	.b-types {
+
+	.shopSection p{
+		text-align: center;
+		max-width:180px;
+		
+	}
+
+	.shopSection div img {
 		display: block;
+		margin: 5% auto;
+        width:80%;
 	}
-	.b-types img {
-		width: 100%;
+
+	.shopSection  div p{
+		display: block;
+		margin:auto;
+		font-family:  Roboto, "Bebas Neue", "sans-serif";
+		font-size: 0.9em;
+		line-height: 2;
 	}
-	.access img {
-		display: none;
-	}
-	.access {
-		background-image: url("../images/accessories-phone.png");
-		background-size: cover;
-		padding-top: 1%;
-		min-height: 100px;
-	}
-	.access h2 {
-		color: white;
+
+	.add-to-cart-btn{
+		border-radius: 5px;
+		border: none;
+		background-color: #292929;
+		color:white;
+		cursor: pointer;
+		min-width: 120px;
+		padding: 3% ;
+		display: block;
+		margin: 2% auto;
+		font-size: 1.2em;
 		font-family: "Bebas Neue", Roboto, "sans-serif";
+	}
+
+
+   
+    /*ABOUT*/
+	.about {
+		width:90%;
+		margin: auto;
+        padding-top: 30%;
+	}
+    .about h1{
+        font-family: "Bebas Neue", Roboto, "sans-serif";
 		text-align: center;
-		font-size: 2em;
-	}
-	.customize-section {
-		background-image: url("../images/customization-phone.png");
-		background-size: cover;
-		padding-top: 1%;
-		margin-top: 1%;
-		min-height: 100px;
-	}
-	.customize-section h2 {
-		color: white;
-		font-family: "Bebas Neue", Roboto, "sans-serif";
-		text-align: center;
-		font-size: 2em;
+		font-size: 3em;
+		margin-bottom: 0;
+    }
+    .about i{
+        color:rgb(0, 0, 0);
+        font-size:5em;
+        display: block;
+       text-align: center;
+    }
+    
+
+    .about p {
+        font-size:0.9em;
+        font-family: Roboto, "Bebas Neue",  "sans-serif";
+        margin: 2% auto;
+        text-align: justify;
+        line-height: 1.5;
+    }
+
+    .about h2 {
+		font-size: 1.9em;
+        margin-top: 0;
+        font-family: "Bebas Neue", Roboto, "sans-serif";
+        text-align: center;
 	}
 
-/*ABOUT*/
+    .about-biography div{
+        width:100%;
+        font-size: 1.3em;
+    }
 
+    .about-biography{
 
-.about h1, 
-.about h2 {
-    text-align: center;
-    margin-top: 5%;
-    font-family: "Bebas Neue", Roboto, "sans-serif";
-}
+        display:block;
+        
+    }
+
+    .about-biography img {
+        width:100%;
+
+    }
+
+    .philosophy{
+display: block;
+font-size: 1.3em;
+    }
+    .philosophy img{
+        width:100%;
+    }
+    .philosophy div {
+        display: block;
+        width: 100%;
+    }
+
+    .why-we{
+        background-image: url(../images/why-we.jpg);
+        color:white;
+        background-size: cover;
+        background-position: 80%;
+        min-height:30vh;
+        padding-top: 8%;
+        padding-bottom: 5%;
+        margin-top: 5%;
+        background-attachment: fixed;
+    }
+
 
 .about-who-are-we{
-    padding: 15% 0 15%;
-    margin: 4% 0;
-    background-image: url("../images/who-are-we.jpg");
-    color: white;
+    background-image: url(../images/who-are-we.jpg);
+    color:white;
+    background-size: cover;
+    background-position: 20%;
+    min-height:25vh;
+    padding: 8% 0;
+    margin: 5% 0;
+    background-attachment: fixed;
 }
 
-.why-we {
-    padding: 12% 0 5%;
-    margin: 4% 0 0;
-    background-image: url("../images/philocophy.jpg");
-    color: white;
+.about-who-are-we p,
+.why-we p
+{
+   width: 90%;
 }
 
-.about img {
-    width: 100%;
-    display: block;
-    margin:5% auto 0;
-}
-
-.about p{
-    width:90%;
-    text-align: justify;
-    margin: auto;
-    line-height: 1.5;
-}
-
-/*EVENTS*/
-
-.events {
-    width:100%;
-    font-family: "Bebas Neue", Roboto, "sans-serif";
-}
-
-.events h1{
-    text-align: center;
-    margin: 5% 0 0 0;
   
+/*EVENTS*/
+.events  {
+    width:90%;
+    margin: auto;
+    padding-top: 35%;
+    margin-bottom: 5%;
+}
+
+.events i{
+        color:rgb(0, 0, 0);
+        font-size:5em;
+        display: block;
+       text-align: center;
+    
+}
+.events h1
+{
+    font-family: "Bebas Neue", Roboto, "sans-serif";
+    text-align: center;
+    font-size: 3em;
+    margin-bottom: 0;
 }
 
 .events h3{
     text-align: center;
-    margin: 0 0 5% 0;
+    font-family:  "Bebas Neue", Roboto, sans-serif;
+    font-size:1.6em;
+    margin-top: 0;
+    margin-bottom:5%;
 }
 
-.events h2{
+.first-event h2,
+.second-event h2
+{
+    font-family: "Bebas Neue", Roboto, sans-serif;
     text-align: center;
-    margin: 5% 0 5% 0;
+    font-size: 2.2em;
+    margin: 0;
 }
-  .events p{
-    font-family: Roboto,  "Bebas Neue", "sans-serif";
-    width:90%;
-    margin: auto;
+
+
+.first-event h3,
+.second-event h3
+{
+    font-family: "Bebas Neue", Roboto, sans-serif;
+    text-align: center;
+    font-size: 1.7em;
+    margin: 2% 0;
+}
+
+
+.first-event h4,
+.second-event h4
+{
+    font-family: "Bebas Neue", Roboto, sans-serif;
+    text-align: center;
+    font-size: 1.4em;
+    margin: 0;
+
+}
+
+.first-event,
+.second-event
+{
+    display: block;
+    margin-top: 2%;
+    margin-bottom: 15%;
+}
+
+
+.first-event img,
+.second-event img
+{
+    max-width:100%;
+}
+
+.first-event p,
+.second-event p
+{
+font-size: 1.2em;
+font-family: Roboto, "Bebas Neue", "sans-serif";
+width:100%;
+line-height: 1.5;
+
+}
+
+.first-event div,
+.second-event div {
+    width: 100%;
     text-align: justify;
-  }  
 
-.events img {
-    width:90%;
-    display: block;
-    margin: auto;
-}
-
-div h3{
-
-    width:90%;
-    font-size:1.5em;
-    text-align: left!important;
-    margin: 2% auto  0!important;
-}
-div h4{
-
-    text-align: left;
-    width:90%;
-    font-size:1.3em;
-    margin: 0 auto 5%;
-}
-
-/*SHOP*/
-
-.shop h1,
-.shop h3 {
-    text-align: center;
-}
-
-aside{
-    display: none;
 }
 
 
-.shop div img{
-    display: block;
-    margin: auto;
-}
+    /*CONTACT*/
+    .contacts{
+        padding-top: 35%;
+        width:90%;
+        margin: auto;
+    }
 
-.shop div p{
-
-    text-align: center;
-}
-
-.add-to-cart-btn{
-    border-radius: 5px;
-    border: none;
-    background-color: #E74700;
-    color:white;
-    cursor: pointer;
-    min-width: 150px;
-    padding: 3% ;
-    display: block;
-    margin: 5% auto;
-    font-size: 1.2em;
-    font-family: "Bebas Neue", Roboto, "sans-serif";
-}
-
-
-/*CONTACT*/
-
-.form h1,
-.form h6 {
-    text-align: center;
-}
-
-.form-container h6{
-    font-size:1.2em;
-    margin: 0 0 2% ;
-}
-
-	form {
+    .contacts h1
+    {
+		font-family: "Bebas Neue", Roboto, "sans-serif";
+		text-align: center;
+		font-size: 3em;
+		margin-bottom: 0;
+	}
+    .contacts i{
+        color:rgb(0, 0, 0);
+        font-size:5em;
         display: block;
-		width:70%;
-		margin: 5% auto;
+       text-align: center;
+    }
+    .form-container{
+
+        width:100%;
+        margin: auto;
+        display: block;
+        margin-top: 5%;
+    }
+
+    .hours p {
+        font-size: 1.3em;
+        line-height: 2;
+        font-family:  "Bebas Neue", Roboto, "sans-serif";
+    }
+	form {
+		width:90%;
+		border: none;
 		border-radius: 20px;
-        padding: 10% 8%;
-		background-color: #E74700;
+		min-height: max-content;
+		display: block;
+		margin: 0 auto 4%;
+		padding: 3% 5%;
+		background-color:#292929;
 		color: white;
+        font-family:  "Bebas Neue", Roboto, "sans-serif";
 	}
 	label {
-		font-family: "Bebas Neue", Roboto, "sans-serif";
 		font-size: 1.4em;
 		line-height: 2.5;
-        padding-left: 1%;
 	}
+
 	.textbox {
 		border: rgb(216, 216, 216) 2px solid;
 		border-radius: 5px;
-		width:100%;
+		width: 90%;
 		min-height: 30px;
 		color: rgb(138, 138, 138);
 		padding-left: 2%;
@@ -305,31 +514,63 @@ aside{
 	.container {
 		display: flex;
 		align-items: center;
+
 	}
+
 	.container label {
 		display: flex;
 		align-items: center;
 		font-family: Roboto, "Bebas Neue", "sans-serif";
 		margin: 1% 0;
 		font-size: 1.12em;
-		padding-left: 1.5%;
+		padding-right: 5%;
+
 	}
+    .container input[type = "checkbox"]{
+        margin-right:10%;
+    }
 	.radio {
 		font-family: Roboto, "Bebas Neue", "sans-serif";
 		font-size: 1.12em;
 	}
 	select {
 		max-width: 300px;
-		font-size: 1.0em;
-		font-family: Roboto, "Bebas Neue", "sans-serif";
+		font-size: 1.12em;
+		font-family: "Bebas Neue", Roboto, "sans-serif";
 		border-radius: 5px;
+        padding: 1%;
 		border-color: rgb(209, 209, 209);
 	}
+
+    .hours h4{
+        font-family: "Bebas Neue", Roboto, "sans-serif";
+        font-size: 2em;
+    }
+
+    .hours ul{
+        display: block;
+        list-style-type: none;
+        line-height: 1.8;
+        font-size: 1.3em;
+        font-family:  Roboto, "Bebas Neue", "sans-serif";
+    }
+
+    #yes{
+        margin-right: 2%;
+    }
+
+    #no{
+        margin: 0 2%;
+    }
+
+    .map {
+        display: none;
+    }
 	/*Submot button*/
 	#sub-btn {
-		margin: 10% auto;
+		margin: 5% auto;
 		display: block;
-		max-width: 200px;
+		min-width: 190px;
 		height: 51px;
 		background-color: #1499D3;
 		color: white;
@@ -338,109 +579,104 @@ aside{
 		border-radius: 35px;
 		font-family: "Bebas Neue", Roboto, "sans-serif";
 	}
-
-	#message {
-		width:100%;
-	}
-
-    .map{
-        display: none;
-    }
-
-	/*Subscription section*/
-	.subscribtion {
-		width: 100%;
+	#sub-btn:hover {
 		margin: 5% auto;
-		padding-top: 5%;
-	}
-	.subscribtion h6 {
-		text-align: center;
-		font-family: "Bebas Neue", Roboto, "sans-serif";
-		font-size: 1em;
-		color: #585858;
-		margin: 1.6%;
-	}
-	.sub-field {
-		border: #c7c7c7 2px solid;
-		border-radius: 5px;
-		min-width: 273px;
-		height: 36px;
-		color: #868686;
-		padding-left: 1%;
-		margin: auto;
 		display: block;
-	}
-	.submit {
-		margin: 0 auto 5%;
-		display: block;
-		width: 160px;
+        min-width: 190px;
 		height: 51px;
-		background-color: #1499D3;
-		color: white;
+		background-color: white;
+		color: #1499D3;
 		border: none;
-		font-size: 1.5em;
+		font-size: 2em;
 		border-radius: 35px;
 		font-family: "Bebas Neue", Roboto, "sans-serif";
 	}
-	.submit:hover {
-		background-color: #E74700;
+	textarea {
+		width: 90%;
+		height: 100px;
 	}
+
+
 	/*Footer*/
 	footer {
-		background-color: #E74700;
-		margin: 0;
+		background-color: #292929;
+		margin: 5% 0 0 0;
 		width: 100%;
-		padding-bottom: 1%;
+		padding-bottom: 2%;
 		color: white;
 		font-family: Roboto, "Bebas Neue", "sans-serif";
-	}
-	footer h4 {
-		font-size: 1.5em;
-		text-decoration: underline;
-		text-align: left;
-		letter-spacing: 1.2px;
-		margin: 15% 0 0;
-		font-family: "Bebas Neue", Roboto, "sans-serif";
-	}
-	footer section p {
-		font-size: 1em;
+        position: relative;
+        z-index:10;
 	}
 	.footer-container {
-		display: block;
-		line-height: 1!important;
-		width: 90%;
+        width:90%;
 		margin: auto;
+
 	}
-	.helpfull-links {
-		text-align: center;
-		margin-right: 10%;
+	.contactLinks h4{
+		font-size: 1.4em;
+		text-decoration: underline;
+		letter-spacing: 1.2px;
+		margin: 15% 0 2%;
 	}
+	.contactLinks p{
+		font-family: Roboto, "Bebas Neue",  "sans-serif";
+		font-size:0.9em;
+	}
+    .contactLinks i{
+        padding-right: 5px;
+    }
 	.Links {
-		font-size: 3.2vw;
 		display: flex;
-		align-items: baseline;
 		justify-content: space-between;
+		align-items: flex-start;
+       min-width: 60%;
 	}
-	footer ul {
+	.copyright {
 		display: block;
-		text-align: left;
-		padding: 0;
+		font-family: "Bebas Neue", Roboto, "sans-serif";
+		font-size: 1.2em;
+		margin-top: 2%;
+		text-align: center;
+	}
+	.social-media-footer {
+		display: inline-block;
+	}
+
+	footer h4 {
+		font-size: 1.4em;
+		text-decoration: underline;
+		letter-spacing: 1.2px;
+		margin: 15% 0 2%;
+        text-align: left!important;
+        padding: 0;
+		font-family: "Bebas Neue", Roboto, "sans-serif";
+	}
+
+	footer p {
+		font-size: 0.8em;
+        line-height: 2;
+	}
+	#helpfull-links-section {
+		display: none;
 	}
 	footer ul li {
 		list-style-type: none;
 		color: white;
-		display: block;
+        margin: 0;
+        padding: 0;
 		text-align: left;
 	}
 	footer ul li a {
 		color: white;
 		text-decoration: none;
 		font-size: 1em;
-		line-height: 1.2;
+		line-height: 1.5;
 	}
-	.copyright {
-		text-align: center;
+	footer ul li a:hover {
+		color: white;
+		text-decoration: underline;
 		font-size: 1em;
+		line-height: 1.5;
 	}
 }
-
